# gbx

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  README.md  devenv.nix  package-lock.json  package.json  server.js
.cargo/: config.toml
.claude/: settings.json
.config/: nextest.toml
.github/workflows/: ci.yml  cloud-parity.yml  nightly.yml
crates/01-transport/transport/: Cargo.toml
crates/01-transport/transport-codecs/: Cargo.toml
crates/01-transport/transport-codecs/src/: lib.rs
crates/01-transport/transport-fabric/: Cargo.toml
crates/01-transport/transport-fabric/src/: builder.rs  codec.rs  endpoint.rs  error.rs  lib.rs  port.rs  service.rs
crates/01-transport/transport-fabric/tests/: mailbox_tests.proptest-regressions  mailbox_tests.rs
crates/01-transport/transport-scenarios/: Cargo.toml
crates/01-transport/transport-scenarios/src/: engine.rs  handle.rs
crates/01-transport/transport/src/: error.rs  lib.rs  schema.rs  slot_pool.rs  wait.rs  wasm.rs
crates/02-runtime/fabric-worker-wasm/: Cargo.toml
crates/02-runtime/fabric-worker-wasm/src/: lib.rs
crates/02-runtime/runtime-native/: Cargo.toml
crates/02-runtime/runtime-native/src/: lib.rs
crates/02-runtime/runtime-web-harness/: Cargo.toml
crates/02-runtime/runtime-web-harness/src/: lib.rs
crates/03-driver/service-abi/: Cargo.toml
crates/03-driver/service-abi/src/: lib.rs
crates/03-driver/services-common/: Cargo.toml
crates/03-driver/services-common/src/: lib.rs
crates/03-driver/services-fabric/: Cargo.toml
crates/03-driver/services-fabric/src/: lib.rs
crates/03-driver/transport-codecs/: Cargo.toml
crates/03-driver/transport-codecs/src/: lib.rs
crates/03-driver/transport-codecs/tests/: debug_codec_roundtrip.rs  debug_schema_golden.rs  generate_debug_golden.rs
crates/04-services/audio/: Cargo.toml
crates/04-services/audio/src/: lib.rs
crates/04-services/fs/: Cargo.toml
crates/04-services/fs/src/: lib.rs
crates/04-services/gpu/: Cargo.toml
crates/04-services/gpu/src/: lib.rs
crates/04-services/kernel/: Cargo.toml
crates/04-services/kernel-core/: Cargo.toml
crates/04-services/kernel-core/src/: bus.rs  bus_simd.rs  core.rs  cpu.rs  exec.rs  exec_simd.rs  instr.rs  lib.rs  mmu.rs  ppu_stub.rs  state.rs  tests.rs  tests_common.rs  timers.rs
crates/04-services/kernel-core/tests/: blargg_cpu.rs  blargg_cpu_simd.rs  lockstep_sameboy.rs  mooneye_timing.rs
crates/04-services/kernel/src/: instance.rs  lib.rs  sink_transport.rs  tests.rs
crates/04-services/kernel/tests/: simd_lane_frames.rs
crates/05-app-loop/app/src/: lib.rs  priority.rs
crates/05-app-loop/app/tests/: health.rs  priority.rs
crates/05-app-loop/gbx-frame/: Cargo.toml
crates/05-app-loop/gbx-frame/src/: lib.rs
crates/05-app-loop/hub/: Cargo.toml
crates/05-app-loop/hub/src/: lib.rs
crates/05-app-loop/inspector-vm/: Cargo.toml
crates/05-app-loop/inspector-vm/src/: lib.rs
crates/05-app-loop/world/: Cargo.toml
crates/05-app-loop/world/src/: inspector.rs  lib.rs  reduce_intent.rs  (+3 more)
crates/06-apps/gbx-cli-inspector/: Cargo.toml
crates/06-apps/gbx-cli-inspector/src/: main.rs
crates/06-apps/gbx-cli-inspector/src/snapshots/: gbx_cli_inspector__tests__hexdump_render.snap  gbx_cli_inspector__tests__snapshot_render.snap  gbx_cli_inspector__tests__step_instruction_render.snap
crates/06-apps/gbx-wasm/: Cargo.toml
crates/06-apps/gbx-wasm/src/: lib.rs  tests.rs  ui.rs  worker_services.rs
crates/06-apps/mock/: Cargo.toml
crates/06-apps/mock/src/: lib.rs
crates/06-apps/mock/tests/: noop.rs
crates/06-apps/runtime-web-harness/: Cargo.toml
crates/06-apps/runtime-web-harness/src/: lib.rs
crates/99-tests/tests/: Cargo.toml
crates/99-tests/tests/src/: frame_sanity.rs  inspector_ndjson.rs  lib.rs  native_e2e.rs  schema_golden.rs
crates/99-tests/tests/tests/golden/ndjson/: inspector_blargg03.ndjson
crates/app/: Cargo.toml
crates/app/src/: health.rs  lib.rs
crates/dev_server/: Cargo.toml
crates/dev_server/src/: main.rs
crates/gbx-wasm/: Cargo.toml
crates/gbx-wasm/src/: lib.rs  tests.rs
crates/hub/: Cargo.toml
crates/hub/src/: lib.rs
crates/mock/: Cargo.toml
crates/mock/src/: lib.rs
crates/mock/tests/: noop.rs
crates/services/audio/: Cargo.toml
crates/services/fs/: Cargo.toml
crates/services/gpu/: Cargo.toml
crates/services/kernel/: Cargo.toml
crates/services/services-transport/: Cargo.toml
crates/services/services-transport/src/: lib.rs
crates/testdata/: Cargo.toml  README.md  build.rs  roms.index.toml
crates/testdata/src/: lib.rs  types.rs
crates/tests/: Cargo.toml  webdriver.json
crates/tests/src/: lib.rs  native_e2e.rs  schema_golden.rs  wasm.rs
crates/transport/: Cargo.toml
crates/transport-codecs/: Cargo.toml
crates/transport-codecs/src/: lib.rs
crates/transport-fabric/: Cargo.toml
crates/transport-fabric/src/: builder.rs  endpoint.rs  layout.rs  lib.rs  port.rs  runtime.rs  span.rs
crates/transport-fabric/tests/: mailbox_tests.rs
crates/transport-scenarios/: Cargo.toml
crates/transport-scenarios/src/: checks.rs  config.rs  engine.rs  handle.rs  lib.rs  stats.rs
crates/transport-worker/: Cargo.toml
crates/transport-worker/src/: lib.rs
crates/transport/src/: error.rs  lib.rs  mailbox.rs  msg_ring.rs  region.rs  schema.rs  slot_pool.rs  wasm.rs
crates/world/: Cargo.toml
crates/world/src/: lib.rs  types.rs  world.rs
crates/world/tests/: intent_reduce.rs  report_reduce.rs
docs/: architecture.md  cross-platformized.md  scaffold.md  transport-spec.md  web-generalized.md
patches/: wasm-bindgen-cli-support-disable-thread-transform.patch
scripts/: check-layer-deps.py  generate_testrom_manifest.py  run-browser-test.sh  validate-commit-msg.sh
scripts/cloud/: setup.sh
scripts/codex/: maintain.sh  setup.sh
scripts/env/: NATIVE_RUSTFLAGS  WASM_RUSTFLAGS
scripts/tasks/: run.sh
tests/: demo_browser_test.js  ui_blargg_check.mjs  wasm_browser_test.js  wasm_node_smoke.js  wasm_server.js
tests/wasm/: index.html
web/: index.html  server.js  trunk.toml  worker.js
(+7 files in other folders)
