[package]
name = "dev_server"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
axum = "0.7"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "signal"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "set-header", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
