[package]
name = "gbx-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core worker functionality (reusable, no app/hub dependencies)
transport-worker = { path = "../transport-worker" }
transport = { path = "../transport" }
transport-codecs = { path = "../transport-codecs" }
transport-fabric = { path = "../transport-fabric" }
parking_lot = { workspace = true }

# GBX-specific dependencies for test orchestration
app = { path = "../app" }
hub = { path = "../hub" }
mock = { path = "../mock" }
world = { path = "../world" }
services-transport = { path = "../services/services-transport" }
transport-scenarios = { path = "../transport-scenarios" }
gbx-frame = { path = "../gbx-frame" }

# WASM bindings
wasm-bindgen = "0.2.104"
wasm-bindgen-futures = "0.4"
js-sys = "0.3.81"
futures = "0.3"
gloo-timers = { version = "0.2", features = ["futures"] }

# Serialization for transport
bytecheck = "0.8"
rkyv = { version = "0.8", features = ["bytecheck"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = [
  "Blob",
  "BlobPropertyBag",
  "DedicatedWorkerGlobalScope",
  "MessageEvent",
  "Worker",
  "WorkerOptions",
  "WorkerType",
  "Url",
  "console",
] }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
