[package]
name = "tests"
version = "0.1.0"
edition = "2021"

[dependencies]
app = { path = "../app" }
hub = { path = "../hub" }
mock = { path = "../mock" }
world = { path = "../world" }
bytecheck = "0.6"
rkyv = { version = "0.7", features = ["validation"] }
transport = { path = "../transport" }
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
futures = "0.3"
gloo-timers = { version = "0.2", features = ["futures"] }
web-sys = { version = "0.3", features = [
  "Blob",
  "BlobPropertyBag",
  "DedicatedWorkerGlobalScope",
  "MessageEvent",
  "Worker",
  "WorkerOptions",
  "WorkerType",
  "Url",
  "console",
] }
