[package]
name = "tests"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
app = { path = "../app" }
hub = { path = "../hub" }
mock = { path = "../mock" }
world = { path = "../world" }
bytecheck = "0.8"
rkyv = { version = "0.8", features = ["bytecheck"] }
transport = { path = "../transport" }
transport-worker = { path = "../transport-worker" }
transport-fabric = { path = "../transport-fabric" }
transport-scenarios = { path = "../transport-scenarios" }
parking_lot = { workspace = true }
services-transport = { path = "../services/services-transport" }
gbx-frame = { path = "../gbx-frame" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
futures = "0.3"
gloo-timers = { version = "0.2", features = ["futures"] }
web-sys = { version = "0.3", features = [
  "Blob",
  "BlobPropertyBag",
  "DedicatedWorkerGlobalScope",
  "MessageEvent",
  "Worker",
  "WorkerOptions",
  "WorkerType",
  "Url",
  "console",
] }
