[package]
name = "transport-fabric"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
hub = { path = "../hub" }
parking_lot = { workspace = true }
smallvec = { workspace = true }
thiserror = { workspace = true }
transport = { path = "../transport" }
tracing = "0.1"
