[package]
name = "transport-worker"
version = "0.1.0"
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
transport = { path = "../transport" }
transport-fabric = { path = "../transport-fabric" }
wasm-bindgen = "0.2.104"
js-sys = "0.3.81"
web-sys = { version = "0.3.81", features = ["console"] }
rkyv = { version = "0.8", features = ["bytecheck"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.104"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
