[package]
name = "transport"
version = "0.1.0"
edition = "2021"

[features]
default = []
loom = ["dep:loom"]

[dependencies]
rkyv = { version = "0.7", features = ["validation"] }
loom = { version = "0.6", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
memmap2 = "0.9"

[dev-dependencies]
rand = { version = "0.8", features = ["std"] }
