[package]
name = "fabric-worker-wasm"
version = "0.1.0"
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
transport = { path = "../../01-transport/transport" }
transport-fabric = { path = "../../01-transport/transport-fabric" }
transport-scenarios = { path = "../../01-transport/transport-scenarios" }
transport-codecs = { path = "../../01-transport/transport-codecs" }
hub = { path = "../../05-app-loop/hub" }
services-kernel = { path = "../../04-services/kernel" }
services-fs = { path = "../../04-services/fs" }
services-gpu = { path = "../../04-services/gpu" }
services-audio = { path = "../../04-services/audio" }
parking_lot = { workspace = true }
wasm-bindgen = "0.2.104"
js-sys = "0.3.81"
web-sys = { version = "0.3.81", features = ["console"] }
rkyv = { version = "0.8", features = ["bytecheck"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.104"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
