[package]
name = "services-fabric"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
service-abi = { path = "../service-abi" }
transport = { path = "../../01-transport/transport" }
transport-fabric = { path = "../../01-transport/transport-fabric" }
transport-codecs = { path = "../transport-codecs" }
