[package]
name = "transport-codecs"
version = "0.1.0"
edition.workspace = true

[dependencies]
rkyv = { version = "0.8", features = ["bytecheck"] }
thiserror = { workspace = true }
service-abi = { path = "../service-abi" }
transport = { path = "../../01-transport/transport" }
transport-fabric = { path = "../../01-transport/transport-fabric" }
