[package]
name = "services-kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
hub = { path = "../../05-app-loop/hub" }
kernel-core = { path = "../kernel-core" }
services-common = { path = "../../03-driver/services-common" }
smallvec = { workspace = true }
transport = { path = "../../01-transport/transport" }
