[package]
name = "gbx-cli-inspector"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
service-abi = { path = "../../03-driver/service-abi" }
services-kernel = { path = "../../04-services/kernel" }
inspector-vm = { path = "../../05-app-loop/inspector-vm" }
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
insta = { version = "1.38", default-features = false, features = ["glob"] }
