[package]
name = "gbx-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core worker functionality (reusable, no app/hub dependencies)
fabric-worker-wasm = { path = "../../02-runtime/fabric-worker-wasm" }
transport = { path = "../../01-transport/transport" }
transport-codecs = { path = "../../01-transport/transport-codecs" }
transport-fabric = { path = "../../01-transport/transport-fabric" }
parking_lot = { workspace = true }

# GBX-specific dependencies for test orchestration
app = { path = "../../05-app-loop/app" }
hub = { path = "../../05-app-loop/hub" }
mock = { path = "../mock" }
world = { path = "../../05-app-loop/world" }
services-fabric = { path = "../../03-driver/services-fabric" }
transport-scenarios = { path = "../../01-transport/transport-scenarios" }
gbx-frame = { path = "../../05-app-loop/gbx-frame" }

# WASM bindings
wasm-bindgen = "0.2.104"
wasm-bindgen-futures = "0.4"
js-sys = "0.3.81"
futures = "0.3"
gloo-timers = { version = "0.2", features = ["futures"] }

# Serialization for transport
bytecheck = "0.8"
rkyv = { version = "0.8", features = ["bytecheck"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
runtime-web-harness = { path = "../../02-runtime/runtime-web-harness" }
web-sys = { version = "0.3", features = [
  "Blob",
  "BlobPropertyBag",
  "DedicatedWorkerGlobalScope",
  "MessageEvent",
  "Worker",
  "WorkerOptions",
  "WorkerType",
  "Url",
  "console",
] }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
