[package]
name = "mock"
version = "0.1.0"
edition = "2021"

[dependencies]
hub = { path = "../../05-app-loop/hub" }
world = { path = "../../05-app-loop/world" }
services-kernel = { path = "../../04-services/kernel" }
services-gpu = { path = "../../04-services/gpu" }
services-audio = { path = "../../04-services/audio" }
services-fs = { path = "../../04-services/fs" }
