[package]
name = "mock"
version = "0.1.0"
edition = "2021"

[dependencies]
hub = { path = "../../05-app-loop/hub" }
service-abi = { path = "../../03-driver/service-abi" }
services-audio = { path = "../../04-services/audio" }
services-fs = { path = "../../04-services/fs" }
services-gpu = { path = "../../04-services/gpu" }
services-kernel = { path = "../../04-services/kernel" }
smallvec = { workspace = true }
world = { path = "../../05-app-loop/world" }
