[package]
name = "services-transport"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
hub = { path = "../../hub" }
transport = { path = "../../transport" }
transport-fabric = { path = "../../transport-fabric" }
transport-codecs = { path = "../../transport-codecs" }
